[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypexbt-api"
version = "1.0.0"
description = "FastAPI echo server for hypexbt"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "HypeXBT" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
] 